# dippa

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUDIT.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  TODO.md  audit.html  index.html  pyproject.toml  roadmap.html  robots.txt  search.json  sitemap.xml
.github/workflows/: ci.yml  publish.yml
docs/: _quarto.yml  audit.qmd  index.qmd  roadmap.qmd  styles.css
notebooks/: 01_fitting_demonstration.html  01_fitting_demonstration.ipynb  01_profiles_walkthrough.ipynb  02_fitting_walkthrough.ipynb  03_fitting_demonstration.ipynb  04_williamson_hall.ipynb
src/dippa/: __init__.py  analysis.py  background.py  breadth.py  contrast.py  fitting.py  profiles.py  regrid.py  structure.py  williamson_hall.py
src/dippa/io/: __init__.py  legacy_io.py  matlab_io.py  raw.py
tests/: test_analysis.py  test_background.py  test_breadth.py  test_contrast.py  test_fitting.py  test_legacy_io.py  test_matlab_io.py  test_profiles.py  test_raw_io.py  test_regrid.py  test_structure.py  test_williamson_hall.py
tests/fixtures/: ni_combo_minimal.mat  ni_combo_small.mat  reference_data.mat  reference_fit.mat
tests/fixtures/raw/: thom_co7.UDF
