[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dippa"
version = "0.0.1.dev0"
description = "Diffraction peak profile analysis in Python (Warren-Averbach, Williamson-Hall, modified Williamson-Hall)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Thomas H. Simm" }]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pydantic>=2.5",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=8", "pytest-cov", "ruff==0.15.12"]

[project.urls]
Repository = "https://github.com/ThomasHSimm/dippa"
Homepage = "https://thomashsimm.github.io/dippa"
"Original MATLAB tool" = "https://github.com/ThomasHSimm/DPPA"

[tool.hatch.build.targets.wheel]
packages = ["src/dippa"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
